# webserver

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Findasio.cmake.patch  LICENSE.md  PKGBUILD  PKGBUILD.fineftp  README.md  article.html  bootstrap.css  compose.yml  config.cpp  config.h  confirm.html  constants.hpp  custom_event_handler.hpp  dashboard.html  error.html  ftp_event_handler.h  ftp_session.cpp.patch  ftp_user.h  main.cpp  register.html  server.cpp  server.h  zip_dir.cpp  zip_dir.h
.github/workflows/: cmake-single-platform.yml  docker-image.yml
archpackage/: PKGBUILD  ftp  strscan.c  strscan.h
debpackage/: makepkg.sh
debpkg/: makepkg.sh
debpkg/webserver/DEBIAN/: control
ftp/: PKGBUILD.fineftp  custom_event_handler.hpp  ftp_event_handler.cpp  ftp_event_handler.h  ftp_session.cpp.patch  ftp_user.h
ftp/debpackage/: makepkg.sh
ftp/debpkg/: makepkg.sh
ftp/debpkg/fineftp-server/DEBIAN/: control
resources/: article.html  bootstrap.css  confirm.html  dashboard.html  error.html  index.html  register.html  verify.html
sources/: CMakeLists.txt  config.cpp  config.h  constants.h  constants.hpp  main.cpp  server.cpp  server.h  settings.cpp  settings.h  tools.cpp  tools.h  users.cpp  users.h
